--- a/game.html
+++ b/game.html
@@ -10,37 +10,45 @@
 	Above is a URL linking to code on Stack Exchange's code reviewing board, written by Sharath Bangera.
 	The post was later edited by Jamal. Contributer whos advice I followed was Janos, though I did take into consideration
 	the heedings of a fellow coder. There are some who call him... Tim.
+	
+	In essense, I had only formatted the code slightly to make it easier to read, adding comments to make it
+	more readily understood
 */
 </script>
 <!DOCTYPE html>
 <html>
-	<title></title>
+	<title>You're BORED?!</title>
 	<head>
 		<link rel="stylesheet" type="text/css" href="pagestyle.css">
 		<link rel="stylesheet" type="text/css" href="ticTac.css"/>	<script>// This link right nere? Not mine. You'll see why.</script>
 		<script type="text/javascript" src="game.js"></script>
+		<script src='functions.js'></script>
 	</head>
-	<body onload="fnLoad();">
-			<p></p>
-			<p>&nbsp</p>
-			<div class="container">	<script>// Another example of something that isn't mine... All the way from here...</script>
-				<div class="minContainer" style="width: 200px; height: 200px; position: relative" align="center">
-				<select id="grid"></select>
-					<button name="NewGame" class="newGame" value="Start a New Game" onClick="fnNewGame()">Start a New Game</button>
-					<table class="row" id="game"></table>
-				</div>	<script>// ...to here? Not mine either.</script>
-				<div style="width: 100px; height: 100px; position: relative">
-					<p>Hello.</p>
-				</div>
-			</div>
-			
-		
-	</body>
-	<footer>
-		<div class="wrapper">
-			<input class="button" type="button" value="Home" onClick="window.location.href = 'index.html'" align="center"/>
-			<input class="button" type="button" value="Contact" onClick="window.location.href = 'contact.html'" align="center"/>
-			<input class="button" type="button" value="Game" align="center"/>
+	<body onload="fnLoad(); window.setInterval(checkTime, 1000);">
+		<div class="navbox"><Script>// Just placing this here for navigation purposes.</script>
+			<input type="button" class="button" value="Home" onClick="window.location.href = 'home.html'" align="center"/>
+			<input type="button" class="button" value="Game" onClick="window.location.href = 'game.html'" align="center"/>
+			<input type="button" class="button" value="Ideas" onClick="window.location.href = 'misc.html'" align="center"/>
+			<input type="button" class="button" value="Contact" onClick="window.location.href = 'contact.html'" align="center"/>
+		</div>​
+
+		<div class="container">	<script>// Another example of something that isn't mine... All the way from here...</script>
+		<div class="minContainer" style="width: auto; height: auto; position: relative; display: inline-block;" align="center">
+		<select id="grid"></select>
+			<button name="NewGame" class="newGame" value="Start a New Game" onClick="fnNewGame()">Start a New Game</button>
+			<p><br/></p>
+			<table class="row" id="game"></table>
+		</div>	<script>// ...to here? Not mine either.</script>
+		<div style="width: 200px; height: 200px; position: relative; top: 10px; right: 10px;">
+			<img>
 		</div>
-	</footer>
+		<div style="width: auto; display: inline-block;">
+			<p>So you're here to play a game? Well I only have tic tac toe for you. Go get a friend, or play against yourself.</p>
+		</div>
+		<div class="navbox1">
+			<p id="clock">
+				&nbsp
+			</p>
+		</div>
+	</body>
 </html>
