--- a/game.html
+++ b/game.html
@@ -39,8 +39,8 @@
 			<p><br/></p>
 			<table class="row" id="game"></table>
 		</div>	<script>// ...to here? Not mine either.</script>
-		<div style="width: 200px; height: 200px; position: relative; top: 10px; right: 10px;">
-			<img>
+		<div style="width: auto; height: auto; position: relative; top: 10px; right: 10px;">
+			<img src="images/globe.png" id="earth">
 		</div>
 		<div style="width: auto; display: inline-block;">
 			<p>So you're here to play a game? Well I only have tic tac toe for you. Go get a friend, or play against yourself.</p>
