--- a/misc.html
+++ b/misc.html
@@ -17,48 +17,35 @@
 				&nbsp
 			</p>
 		</div>
-		
-	<script>
-		// Gotta love how much practice people have at talking shit when they're litterally sitting next to you.
-		// Good fucking going.
-	</script>
 	<div id="accordion">
-	<h3>Section 1</h3>
+	<h3>Read about aliens</h3>
 		<div class="divider">
 			<p>
-			Text1
+				Specifically, fictional works detailing how aliens invaded Earth, decimating the human population. Only to find
+				that the humans were the least of their concerns. They would fall victim to horrid diseases brought on by
+				mosquitos, lose entire armies to a pack of two bears, and have their scent glands poisoned by skunks.
 			</p>
 		</div>
-	<h3>Section 2</h3>
+	<h3>Adopt new views</h3>
 		<div class="divider">
 			<p>
-			text2
+				Or at least entertain alternate ways of thinking. Ask questions about the ideologies of that one person who you
+				strongly disagree with, questioning why they think the way they do. Be respectful, and try and word your questions
+				in a way that makes them question their beliefs in a profound and meaninful way.
 			</p>
 		</div>
-	<h3>Section 3</h3>
+	<h3>Find new music</h3>
 		<div class="divider">
 			<p>
-			text3
+			Take a look at these bands if you haven't already. You could find something you like!
 			</p>
 			<ul>
-				<li>List item one</li>
-				<li>List item two</li>
-				<li>List item three</li>
+				<li>Stratovarius</li>
+				<li>Barenaked Ladies</li>
+				<li>Warrant</li>
+				<li>More a person than a band: Elvis Presley</li>
 			</ul>
 		</div>
-	<h3>This one is important...</h3>
-		<div class="divider">
-			<p>
-			Listen to hamilton. Specifically, have this quote from one of the songs near the end (spoilers!)
-			</p>
-			<p id="time">
-				&nbsp
-			</p>
-			<input type="button" onclick="setInterval(timing(), 500);" value="Spoilers!"/>
-		</div>
 	</div>
-		<script>
-			// Okay, what the hell do I actually do now?
-		</script>
 	</body>
 </html>
